add some subtle zoom, and make the supported extensions a constant in the server.

--- a/config.json
+++ b/config.json
@@ -2,7 +2,5 @@
   "imageDuration": 5,
   "folderPath": "/Users/walljm/Dropbox/Photos/cfc/youth-media",
   "fadeTransitionDuration": 1,
-  "autoStart": true,
-  "supportedImageExtensions": ["jpg", "jpeg", "png", "gif", "webp", "bmp", "svg"],
-  "supportedVideoExtensions": ["mp4", "webm", "ogg", "avi", "mov"]
+  "autoStart": true
 }
