--- a/config.json
+++ b/config.json
@@ -2,5 +2,6 @@
   "imageDuration": 5,
   "folderPath": "/Users/walljm/Dropbox/Photos/cfc/youth-media",
   "fadeTransitionDuration": 1,
-  "autoStart": true
+  "autoStart": true,
+  "zoomOnImage": true
 }
