better logging and large file handling

--- a/app/config.json
+++ b/app/config.json
@@ -1,6 +1,6 @@
 {
   "imageDuration": 5,
-  "folderPath": "/Users/walljm/Dropbox/Photos/cfc/youth-media",
+  "folderPath": "C:\\Users\\walljm\\Dropbox\\Photos\\cfc\\youth-media",
   "fadeTransitionDuration": 1,
   "autoStart": true,
   "zoomOnImage": true
