--- a/dotnet/SlideshowWebServer.csproj
+++ b/dotnet/SlideshowWebServer.csproj
@@ -13,7 +13,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="wwwroot\**\*" />
+    <EmbeddedResource Include="web\**\*" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="uninstall-service.bat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="install-service.bat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
