--- a/dotnet/SlideshowWebServer.csproj
+++ b/dotnet/SlideshowWebServer.csproj
@@ -6,11 +6,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseAppHost>true</UseAppHost>
     <PublishTrimmed>true</PublishTrimmed>
+    <PreserveCompilationContext>true</PreserveCompilationContext>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="8.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="System.Text.Json" Version="8.0.6" />
   </ItemGroup>
 
   <ItemGroup>
