--- a/source/webserver/SlideshowWebServer.csproj
+++ b/source/webserver/SlideshowWebServer.csproj
@@ -1,24 +1,36 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+    <OutputType>Exe</OutputType>
+  </PropertyGroup>
+ 
+  <PropertyGroup>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+  </PropertyGroup>
+ 
+  <PropertyGroup>
     <UseAppHost>true</UseAppHost>
     <PublishTrimmed>true</PublishTrimmed>
     <PreserveCompilationContext>true</PreserveCompilationContext>
     <InvariantGlobalization>true</InvariantGlobalization>
     <SuppressTrimAnalysisWarnings>true</SuppressTrimAnalysisWarnings>
-    <GenerateWebConfigFile>false</GenerateWebConfigFile>
-    <GenerateStaticWebAssetsManifest>false</GenerateStaticWebAssetsManifest>
-    <AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
+    <UseRuntimeStore>false</UseRuntimeStore>
     <DebugType>none</DebugType>
     <DebugSymbols>false</DebugSymbols>
   </PropertyGroup>
 
+
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="8.0.0" />
-    <PackageReference Include="System.Text.Json" Version="8.0.6" />
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices"
+      Version="8.0.0" />
+    <PackageReference Include="System.Text.Json"
+      Version="8.0.6" />
   </ItemGroup>
 
   <ItemGroup>
@@ -36,13 +48,6 @@
 
   <ItemGroup>
     <TrimmerRootDescriptor Include="ILLink.Descriptors.xml" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <_ContentIncludedByDefault Remove="publish-test\config.json" />
-    <_ContentIncludedByDefault Remove="publish-test\SlideshowWebServer.deps.json" />
-    <_ContentIncludedByDefault Remove="publish-test\SlideshowWebServer.runtimeconfig.json" />
-    <_ContentIncludedByDefault Remove="publish-test\SlideshowWebServer.staticwebassets.endpoints.json" />
   </ItemGroup>
 
 </Project>
