--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,11 @@ on:
     tags:
       - 'v*'  # Triggers on tags starting with 'v' like v1.0.0
 
+# Add permissions for the workflow
+permissions:
+  contents: write  # Required for creating releases
+  packages: write  # Optional, for package publishing
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -77,7 +82,7 @@ jobs:
         zip -r ../slideshow-win-x64.zip win-x64/
 
     - name: Create GitHub Release
-      uses: softprops/action-gh-release@v1
+      uses: softprops/action-gh-release@v2
       with:
         files: |
           slideshow-linux-x64.tar.gz
@@ -87,8 +92,6 @@ jobs:
         generate_release_notes: true
         draft: false
         prerelease: false
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Upload complete dist folder
       uses: actions/upload-artifact@v4
