remove autostart option, add displayOrder

--- a/source/config.json
+++ b/source/config.json
@@ -2,6 +2,6 @@
   "imageDuration": 5,
   "folderPath": "/Users/walljm/Dropbox/Photos/cfc/youth-media",
   "fadeTransitionDuration": 1,
-  "autoStart": true,
-  "zoomOnImage": true
+  "zoomOnImage": true,
+  "displayOrder": "Alpha"
 }
