--- a/source/config.json
+++ b/source/config.json
@@ -1,6 +1,6 @@
 {
   "imageDuration": 5,
-  "folderPath": "/path/to/your/images",
+  "folderPath": "/Users/walljm/Dropbox/Photos/cfc/youth-media",
   "fadeTransitionDuration": 1,
   "zoomOnImage": true,
   "displayOrder": "Alpha"
