Add support for linux and systemd reporting

--- a/source/SlideshowWebServer.csproj
+++ b/source/SlideshowWebServer.csproj
@@ -4,12 +4,12 @@
     <TargetFramework>net9.0</TargetFramework>
     <OutputType>Exe</OutputType>
   </PropertyGroup>
- 
+
   <PropertyGroup>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
- 
+
   <PropertyGroup>
     <UseAppHost>true</UseAppHost>
     <PublishTrimmed>true</PublishTrimmed>
@@ -19,7 +19,7 @@
     <UseRuntimeStore>false</UseRuntimeStore>
     <Optimize>true</Optimize>
   </PropertyGroup>
- 
+
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <Optimize>False</Optimize>
   </PropertyGroup>
@@ -50,15 +50,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="8.0.0" />
     <PackageReference Include="System.Text.Json" Version="8.0.6" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="web\**\*" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Remove="config.json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -77,13 +74,21 @@
     </Content>
   </ItemGroup>
 
+  <!-- Include linux directory only for linux builds -->
+  <ItemGroup Condition="'$(RuntimeIdentifier)' == 'linux-arm64' OR '$(RuntimeIdentifier)' == 'linux-x64'">
+    <Content Include="linux\slideshow.service">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
   <ItemGroup>
     <TrimmerRootDescriptor Include="ILLink.Descriptors.xml" />
   </ItemGroup>
 
 
   <!-- (Optional) Ensure no PDBs remain in publish output -->
-  <Target Name="RemovePdbAfterPublish" AfterTargets="Publish">
+  <Target Name="RemovePdbAfterPublish"
+    AfterTargets="Publish">
     <ItemGroup>
       <_PublishedPdb Include="$(PublishDir)**\*.pdb" />
     </ItemGroup>
@@ -91,9 +96,12 @@
   </Target>
 
   <!-- Remove aspnetcorev2_inprocess.dll after publish -->
-  <Target Name="RemoveAspNetCoreV2Dll" AfterTargets="Publish">
-    <Message Text="Removing unused files from publish output..." Importance="high" />
-    <Delete Files="$(PublishDir)aspnetcorev2_inprocess.dll" ContinueOnError="true" />
+  <Target Name="RemoveAspNetCoreV2Dll"
+    AfterTargets="Publish">
+    <Message Text="Removing unused files from publish output..."
+      Importance="high" />
+    <Delete Files="$(PublishDir)aspnetcorev2_inprocess.dll"
+      ContinueOnError="true" />
   </Target>
 
 </Project>
